<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Vishnu Sosale
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>

    <string name="app_name">The Mind</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="text_input_1_hint">What do you really want?</string>
    <string name="text_input_2_hint">Whom/what do you want to thank?</string>
    <string name="text_input_3_hint">Positive thoughts...</string>
    <string name="text_input_4_hint">Your quote of the day</string>
    <string name="action_save">Save</string>
    <string name="open_gallery_button">Open Gallery</string>
    <string name="open_camera_button">Open Camera</string>
    <string name="tag_text">Add pictures for your vision board</string>
    <string name="action_history">History</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_about">About</string>
    <string name="action_vision_board">Vision Board</string>
    <string name="action_logout">Logout</string>
    <string name="about">This app is designed to demonstrate everything
        one wants or needs can be satisfied by believing in an outcome,
        repeatedly thinking about it, and maintaining positive emotional states to
        \"attract\" the desired outcome. </string>
    <string name="picasso_link"><a href="https://github.com/square/picasso">Picasso by Square, Inc.</a></string>
    <string name="android_staggered_grid_view_link"><a href="https://github.com/etsy/AndroidStaggeredGrid">AndroidStaggeredGrid by Etsy</a></string>
    <string name="cardslib_link"><a href="https://github.com/gabrielemariotti/cardslib">Cardslib by Gabriele Mariotti</a></string>
    <string name="parseloginUI_link"><a href="https://github.com/ParsePlatform/ParseUI-Android">ParseUI-Android</a></string>

    <string name="title_activity_image_controller">Add Image</string>
    <string name="action_add_image">Add image</string>
    <string name="action_delete_image">Delete image</string>
    <string name="action_clear_entry">Clear Entered Text</string>
    <string name="action_save_image">Save Image</string>
    <string name="title_activity_vision_board">Vision Board</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username:</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_label">Already Have An Account? Log In!</string>

    <string name="sign_in">Sign-In</string>
    <string name="facebook_signin">Sign In With Facebook</string>
    <string name="twitter_signin">Sign In With Twitter</string>
    <string name="tag_name">Your Key To Success</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_emailid">Email-ID</string>
    <string name="title_activity_login_home">Login Home</string>

    <string name="have_account_already">Already have an account? Log in!</string>
    <string name="signUp">Sign up!</string>

    <string name="add_your_thoughts">Add your thoughts</string>


    <string name="parse_app_id">xE3sBzZzAeyQ8NbSBksMNUGfkCjgDn90ist8bTXx</string>
    <string name="parse_client_key">M1uztXHeI49bV84bFhIyhuw34cSWSMClC5CSS13q</string>
    <string name="facebook_app_id">1530351820581851</string>
    <string name="twitter_consumer_key">51jFlK7nZrccE702mje7vmodx</string>
    <string name="twitter_consumer_secret">FU7YQtCMCxZYS4qTCLArrHLpgnTd2tnSAQmlSwOwHZAAJf2XWF</string>

    <string name="google_analytics_id">UA-60146259-1</string>


    <string name="no_internet_string_main">Can\'t connect to the internet.</string>
    <string name="try_again_button">Try Again</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_activity_history_card_details">History Details</string>

    <string name="ic_action_delete_history">Delete</string>
    <string name="ic_action_edit_history">Edit</string>
    <string name="title_activity_vision_board_full_image">VisionBoardFullImage</string>


</resources>
