<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_history"
        android:orderInCategory="1"
        android:title="@string/action_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_vision_board"
        android:orderInCategory="2"
        android:title="@string/action_vision_board"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
